--- a/ui/resources.qrc
+++ b/ui/resources.qrc
@@ -1,5 +1,7 @@
 <RCC>
   <qresource prefix="logo">
     <file>logo/logo_transparent.png</file>
+    <file>icons/Open.png</file>
+    <file>icons/exit.png</file>
   </qresource>
 </RCC>
