--- a/ui/MainWindow.ui
+++ b/ui/MainWindow.ui
@@ -750,7 +750,7 @@ border-color: rgb(114, 171, 171);</string>
               <string notr="true">background-color: rgb(65, 65, 65);</string>
              </property>
              <property name="text">
-              <string>Connect</string>
+              <string>Connect Tracker</string>
              </property>
              <property name="icon">
               <iconset resource="resources.qrc">
@@ -776,7 +776,7 @@ border-color: rgb(114, 171, 171);</string>
            <item>
             <widget class="QToolButton" name="btn_ToolsWindow">
              <property name="enabled">
-              <bool>true</bool>
+              <bool>false</bool>
              </property>
              <property name="sizePolicy">
               <sizepolicy hsizetype="Preferred" vsizetype="Preferred">
@@ -806,7 +806,7 @@ border-color: rgb(114, 171, 171);</string>
              </property>
              <property name="icon">
               <iconset resource="resources.qrc">
-               <normaloff>:/icon/icons/reset.png</normaloff>:/icon/icons/reset.png</iconset>
+               <normaloff>:/icon/icons/Tools_info.png</normaloff>:/icon/icons/Tools_info.png</iconset>
              </property>
              <property name="iconSize">
               <size>
