--- a/ui/ToolsWindow.ui
+++ b/ui/ToolsWindow.ui
@@ -472,14 +472,14 @@
              <widget class="QLabel" name="r13_tool">
               <property name="font">
                <font>
-                <pointsize>16</pointsize>
+                <pointsize>14</pointsize>
                 <weight>50</weight>
                 <bold>false</bold>
                 <kerning>true</kerning>
                </font>
               </property>
               <property name="text">
-               <string>3.000</string>
+               <string>-</string>
               </property>
              </widget>
             </item>
@@ -487,14 +487,14 @@
              <widget class="QLabel" name="r11_tool">
               <property name="font">
                <font>
-                <pointsize>16</pointsize>
+                <pointsize>14</pointsize>
                 <weight>50</weight>
                 <bold>false</bold>
                 <kerning>true</kerning>
                </font>
               </property>
               <property name="text">
-               <string>1.000</string>
+               <string>-</string>
               </property>
              </widget>
             </item>
@@ -502,14 +502,14 @@
              <widget class="QLabel" name="r12_tool">
               <property name="font">
                <font>
-                <pointsize>16</pointsize>
+                <pointsize>14</pointsize>
                 <weight>50</weight>
                 <bold>false</bold>
                 <kerning>true</kerning>
                </font>
               </property>
               <property name="text">
-               <string>2.000</string>
+               <string>-</string>
               </property>
              </widget>
             </item>
@@ -517,7 +517,7 @@
              <widget class="QLabel" name="t1_tool">
               <property name="font">
                <font>
-                <pointsize>16</pointsize>
+                <pointsize>14</pointsize>
                 <weight>50</weight>
                 <bold>false</bold>
                 <kerning>true</kerning>
@@ -527,7 +527,7 @@
                <string notr="true">color: rgb(85, 255, 255);</string>
               </property>
               <property name="text">
-               <string>4.000</string>
+               <string>-</string>
               </property>
              </widget>
             </item>
@@ -535,14 +535,14 @@
              <widget class="QLabel" name="r21_tool">
               <property name="font">
                <font>
-                <pointsize>16</pointsize>
+                <pointsize>14</pointsize>
                 <weight>50</weight>
                 <bold>false</bold>
                 <kerning>true</kerning>
                </font>
               </property>
               <property name="text">
-               <string>5</string>
+               <string>-</string>
               </property>
              </widget>
             </item>
@@ -550,14 +550,14 @@
              <widget class="QLabel" name="r23_tool">
               <property name="font">
                <font>
-                <pointsize>16</pointsize>
+                <pointsize>14</pointsize>
                 <weight>50</weight>
                 <bold>false</bold>
                 <kerning>true</kerning>
                </font>
               </property>
               <property name="text">
-               <string>7</string>
+               <string>-</string>
               </property>
              </widget>
             </item>
@@ -565,14 +565,14 @@
              <widget class="QLabel" name="r32_tool">
               <property name="font">
                <font>
-                <pointsize>16</pointsize>
+                <pointsize>14</pointsize>
                 <weight>50</weight>
                 <bold>false</bold>
                 <kerning>true</kerning>
                </font>
               </property>
               <property name="text">
-               <string>10</string>
+               <string>-</string>
               </property>
              </widget>
             </item>
@@ -580,14 +580,14 @@
              <widget class="QLabel" name="r33_tool">
               <property name="font">
                <font>
-                <pointsize>16</pointsize>
+                <pointsize>14</pointsize>
                 <weight>50</weight>
                 <bold>false</bold>
                 <kerning>true</kerning>
                </font>
               </property>
               <property name="text">
-               <string>11</string>
+               <string>-</string>
               </property>
              </widget>
             </item>
@@ -595,14 +595,14 @@
              <widget class="QLabel" name="r22_tool">
               <property name="font">
                <font>
-                <pointsize>16</pointsize>
+                <pointsize>14</pointsize>
                 <weight>50</weight>
                 <bold>false</bold>
                 <kerning>true</kerning>
                </font>
               </property>
               <property name="text">
-               <string>6</string>
+               <string>-</string>
               </property>
              </widget>
             </item>
@@ -610,7 +610,7 @@
              <widget class="QLabel" name="t2_tool">
               <property name="font">
                <font>
-                <pointsize>16</pointsize>
+                <pointsize>14</pointsize>
                 <weight>50</weight>
                 <bold>false</bold>
                 <kerning>true</kerning>
@@ -620,7 +620,7 @@
                <string notr="true">color: rgb(85, 255, 255);</string>
               </property>
               <property name="text">
-               <string>8</string>
+               <string>-</string>
               </property>
              </widget>
             </item>
@@ -628,7 +628,7 @@
              <widget class="QLabel" name="t3_tool">
               <property name="font">
                <font>
-                <pointsize>16</pointsize>
+                <pointsize>14</pointsize>
                 <weight>50</weight>
                 <bold>false</bold>
                 <kerning>true</kerning>
@@ -638,7 +638,7 @@
                <string notr="true">color: rgb(85, 255, 255);</string>
               </property>
               <property name="text">
-               <string>12</string>
+               <string>-</string>
               </property>
              </widget>
             </item>
@@ -646,14 +646,14 @@
              <widget class="QLabel" name="r31_tool">
               <property name="font">
                <font>
-                <pointsize>16</pointsize>
+                <pointsize>14</pointsize>
                 <weight>50</weight>
                 <bold>false</bold>
                 <kerning>true</kerning>
                </font>
               </property>
               <property name="text">
-               <string>9</string>
+               <string>-</string>
               </property>
              </widget>
             </item>
@@ -661,7 +661,7 @@
              <widget class="QLabel" name="label_13">
               <property name="font">
                <font>
-                <pointsize>16</pointsize>
+                <pointsize>14</pointsize>
                 <weight>50</weight>
                 <bold>false</bold>
                 <kerning>true</kerning>
@@ -679,7 +679,7 @@
              <widget class="QLabel" name="label_16">
               <property name="font">
                <font>
-                <pointsize>16</pointsize>
+                <pointsize>14</pointsize>
                 <weight>50</weight>
                 <bold>false</bold>
                 <kerning>true</kerning>
@@ -697,7 +697,7 @@
              <widget class="QLabel" name="label_15">
               <property name="font">
                <font>
-                <pointsize>16</pointsize>
+                <pointsize>14</pointsize>
                 <weight>50</weight>
                 <bold>false</bold>
                 <kerning>true</kerning>
@@ -715,7 +715,7 @@
              <widget class="QLabel" name="label_14">
               <property name="font">
                <font>
-                <pointsize>16</pointsize>
+                <pointsize>14</pointsize>
                 <weight>50</weight>
                 <bold>false</bold>
                 <kerning>true</kerning>
@@ -766,14 +766,14 @@
              <widget class="QLabel" name="r12_ref">
               <property name="font">
                <font>
-                <pointsize>16</pointsize>
+                <pointsize>14</pointsize>
                 <weight>50</weight>
                 <bold>false</bold>
                 <kerning>true</kerning>
                </font>
               </property>
               <property name="text">
-               <string>2</string>
+               <string>-</string>
               </property>
              </widget>
             </item>
@@ -781,14 +781,14 @@
              <widget class="QLabel" name="r23_ref">
               <property name="font">
                <font>
-                <pointsize>16</pointsize>
+                <pointsize>14</pointsize>
                 <weight>50</weight>
                 <bold>false</bold>
                 <kerning>true</kerning>
                </font>
               </property>
               <property name="text">
-               <string>7</string>
+               <string>-</string>
               </property>
              </widget>
             </item>
@@ -796,7 +796,7 @@
              <widget class="QLabel" name="t2_ref">
               <property name="font">
                <font>
-                <pointsize>16</pointsize>
+                <pointsize>14</pointsize>
                 <weight>50</weight>
                 <bold>false</bold>
                 <kerning>true</kerning>
@@ -806,7 +806,7 @@
                <string notr="true">color: rgb(85, 255, 255);</string>
               </property>
               <property name="text">
-               <string>8</string>
+               <string>-</string>
               </property>
              </widget>
             </item>
@@ -814,14 +814,14 @@
              <widget class="QLabel" name="r32_ref">
               <property name="font">
                <font>
-                <pointsize>16</pointsize>
+                <pointsize>14</pointsize>
                 <weight>50</weight>
                 <bold>false</bold>
                 <kerning>true</kerning>
                </font>
               </property>
               <property name="text">
-               <string>10</string>
+               <string>-</string>
               </property>
              </widget>
             </item>
@@ -829,14 +829,14 @@
              <widget class="QLabel" name="r11_ref">
               <property name="font">
                <font>
-                <pointsize>16</pointsize>
+                <pointsize>14</pointsize>
                 <weight>50</weight>
                 <bold>false</bold>
                 <kerning>true</kerning>
                </font>
               </property>
               <property name="text">
-               <string>1</string>
+               <string>-</string>
               </property>
              </widget>
             </item>
@@ -844,14 +844,14 @@
              <widget class="QLabel" name="r21_ref">
               <property name="font">
                <font>
-                <pointsize>16</pointsize>
+                <pointsize>14</pointsize>
                 <weight>50</weight>
                 <bold>false</bold>
                 <kerning>true</kerning>
                </font>
               </property>
               <property name="text">
-               <string>5</string>
+               <string>-</string>
               </property>
              </widget>
             </item>
@@ -859,14 +859,14 @@
              <widget class="QLabel" name="r33_ref">
               <property name="font">
                <font>
-                <pointsize>16</pointsize>
+                <pointsize>14</pointsize>
                 <weight>50</weight>
                 <bold>false</bold>
                 <kerning>true</kerning>
                </font>
               </property>
               <property name="text">
-               <string>11</string>
+               <string>-</string>
               </property>
              </widget>
             </item>
@@ -874,7 +874,7 @@
              <widget class="QLabel" name="t3_ref">
               <property name="font">
                <font>
-                <pointsize>16</pointsize>
+                <pointsize>14</pointsize>
                 <weight>50</weight>
                 <bold>false</bold>
                 <kerning>true</kerning>
@@ -884,7 +884,7 @@
                <string notr="true">color: rgb(85, 255, 255);</string>
               </property>
               <property name="text">
-               <string>12</string>
+               <string>-</string>
               </property>
              </widget>
             </item>
@@ -892,14 +892,14 @@
              <widget class="QLabel" name="r22_ref">
               <property name="font">
                <font>
-                <pointsize>16</pointsize>
+                <pointsize>14</pointsize>
                 <weight>50</weight>
                 <bold>false</bold>
                 <kerning>true</kerning>
                </font>
               </property>
               <property name="text">
-               <string>6</string>
+               <string>-</string>
               </property>
              </widget>
             </item>
@@ -907,14 +907,14 @@
              <widget class="QLabel" name="r31_ref">
               <property name="font">
                <font>
-                <pointsize>16</pointsize>
+                <pointsize>14</pointsize>
                 <weight>50</weight>
                 <bold>false</bold>
                 <kerning>true</kerning>
                </font>
               </property>
               <property name="text">
-               <string>9</string>
+               <string>-</string>
               </property>
              </widget>
             </item>
@@ -922,7 +922,7 @@
              <widget class="QLabel" name="label_27">
               <property name="font">
                <font>
-                <pointsize>16</pointsize>
+                <pointsize>14</pointsize>
                 <weight>50</weight>
                 <bold>false</bold>
                 <kerning>true</kerning>
@@ -940,7 +940,7 @@
              <widget class="QLabel" name="label_30">
               <property name="font">
                <font>
-                <pointsize>16</pointsize>
+                <pointsize>14</pointsize>
                 <weight>50</weight>
                 <bold>false</bold>
                 <kerning>true</kerning>
@@ -958,7 +958,7 @@
              <widget class="QLabel" name="t1_ref">
               <property name="font">
                <font>
-                <pointsize>16</pointsize>
+                <pointsize>14</pointsize>
                 <weight>50</weight>
                 <bold>false</bold>
                 <kerning>true</kerning>
@@ -968,7 +968,7 @@
                <string notr="true">color: rgb(85, 255, 255);</string>
               </property>
               <property name="text">
-               <string>4</string>
+               <string>-</string>
               </property>
              </widget>
             </item>
@@ -976,7 +976,7 @@
              <widget class="QLabel" name="label_28">
               <property name="font">
                <font>
-                <pointsize>16</pointsize>
+                <pointsize>14</pointsize>
                 <weight>50</weight>
                 <bold>false</bold>
                 <kerning>true</kerning>
@@ -994,14 +994,14 @@
              <widget class="QLabel" name="r13_ref">
               <property name="font">
                <font>
-                <pointsize>16</pointsize>
+                <pointsize>14</pointsize>
                 <weight>50</weight>
                 <bold>false</bold>
                 <kerning>true</kerning>
                </font>
               </property>
               <property name="text">
-               <string>3</string>
+               <string>-</string>
               </property>
              </widget>
             </item>
@@ -1009,7 +1009,7 @@
              <widget class="QLabel" name="label_29">
               <property name="font">
                <font>
-                <pointsize>16</pointsize>
+                <pointsize>14</pointsize>
                 <weight>50</weight>
                 <bold>false</bold>
                 <kerning>true</kerning>
