pycpd tested in register function in 3D view

--- a/ui/MainWindow.ui
+++ b/ui/MainWindow.ui
@@ -1938,6 +1938,7 @@ border-color: rgb(114, 171, 171);</string>
  </widget>
  <resources>
   <include location="resources.qrc"/>
+  <include location="C:/Users/Saeed/.designer/backup/resources.qrc"/>
  </resources>
  <connections>
   <connection>
