--- a/ui/RegMatWin.ui
+++ b/ui/RegMatWin.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>RegMatWindow</class>
- <widget class="QDialog" name="RegMatWindow">
+ <class>RegMatWin</class>
+ <widget class="QDialog" name="RegMatWin">
   <property name="geometry">
    <rect>
     <x>0</x>
@@ -218,7 +218,7 @@
   <connection>
    <sender>buttonBox</sender>
    <signal>accepted()</signal>
-   <receiver>RegMatWindow</receiver>
+   <receiver>RegMatWin</receiver>
    <slot>accept()</slot>
    <hints>
     <hint type="sourcelabel">
@@ -234,7 +234,7 @@
   <connection>
    <sender>buttonBox</sender>
    <signal>rejected()</signal>
-   <receiver>RegMatWindow</receiver>
+   <receiver>RegMatWin</receiver>
    <slot>reject()</slot>
    <hints>
     <hint type="sourcelabel">
